RESOLVED FIXED150415
WebContextMenuProxy doesn't have to be ref-counted
https://bugs.webkit.org/show_bug.cgi?id=150415
Summary WebContextMenuProxy doesn't have to be ref-counted
Anders Carlsson
Reported 2015-10-21 14:18:59 PDT
WebContextMenuProxy doesn't have to be ref-counted
Attachments
Patch (11.75 KB, patch)
2015-10-21 14:21 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-10-21 14:21:05 PDT
Anders Carlsson
Comment 2 2015-10-21 14:27:21 PDT
Csaba Osztrogonác
Comment 3 2015-10-22 02:33:53 PDT
Csaba Osztrogonác
Comment 4 2015-10-22 02:41:48 PDT
Note You need to log in before you can comment on or make changes to this bug.